--- a/build.xml
+++ b/build.xml
@@ -12,9 +12,9 @@
 
   <path id="classpath">
     <pathelement location="${build.dir}" />
-    <fileset dir="${lib.dir}">
+    <!-- <fileset dir="${lib.dir}">
       <include name="*.jar" />
-    </fileset>
+    </fileset> -->
   </path>
 
   <target name="compile" depends="resources">
