--- a/build.xml
+++ b/build.xml
@@ -64,7 +64,7 @@
   </target>
 
   <target name="run" depends="clean,compile,resources">
-    <java classname="org.joedog.pinochle.Main" fork="false" spawn="false">
+    <java classname="org.joedog.pinochle.Main" fork="true" spawn="false">
       <classpath refid="classpath" />
       <jvmarg value="-splash:${build.dir}org/joedog/pinochle/images/splash.png -XX:-OmitStackTraceInFastThrow"/>
     </java>
